--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="popup">So, you want to fight me?</div>
     </div>
     <div class="webpage-title">Rock, Paper, Scissors</div>
-    <div class="subtitle">Use the arrow keys to move <img src="images/arrows.png" width="30" height="23"></div>
+    <div class="subtitle">Use the arrow keys to move <img src="arrows.png" width="30" height="23"></div>
     <div class="damage-protagonist">-1</div>
     <div class="damage-enemy">-1</div>
     <div class="weapons">
